feat(fix) changed the way id is obtained for handlers
